<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="title_settings">Sunshine Settings</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_summary">Enter the location you want to see weather for.  Enter a postal code or city name.</string>
    <string name="pref_location_default" translatable="false" type="String">23434,USA</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_summary">Select your preferred units for temperatures.  Metric will display temperatures in celsius and Imperial will display temperatures in fahrenheit.</string>
    <string name="pref_units_default">metric</string>
    <string name="units_imperial">imperial</string>
    <string name="action_map">View Map</string>
    <string name="no_map_app">There doesn\'t appear to be an app available to display locations on a map.</string>
    <string name="action_share">Share</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Temperature formats -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="format_spoken_wind_mph">
        Wend: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="format_spoken_wind_kmh">
        Wend: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_spoken_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hectopascals</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="weather_icon_content_description">Weather Icon</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="accessibility_wind_direction_compass">Wend direction compass</string>
</resources>
