<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    android:background="@drawable/today_touch_selector"
    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="60dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/list_item_date_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family_condensed"
            android:textColor="@color/white"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="Today, August 15"
            />
        <TextView
            android:id="@+id/list_item_high_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family_light"
            android:textColor="@color/white"
            android:textSize="72sp"
            android:text="72\u00B0"
            />
        <TextView
            android:id="@+id/list_item_low_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family_light"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:layout_marginLeft="8dp"
            android:text="55\u00B0"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal|bottom"
        >
        <ImageView
            android:id="@+id/list_item_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/weather_icon_content_description"
            android:src="@drawable/art_light_clouds"
            />
        <TextView
            android:id="@+id/list_item_forecast_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:fontFamily="@string/font_family_condensed"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="Clouds"
            />
    </LinearLayout>
</LinearLayout>
